# rdr-recurrent-depth-researcher

./: .gitignore  Makefile  ORCHESTRATOR_RULES.md  README.md  RULES.md  START_HERE.md  pyproject.toml
configs/: run_manifest.yaml
configs/environment/: cluster_shared.yaml  cpu_local.yaml  h100_4gpu.yaml  h100_8gpu.yaml  install_matrix.yaml  multi_gpu.yaml  single_gpu.yaml
configs/pipelines/: default.yaml
configs/strategies/: strategy_matrix.yaml
docs/: CANONICAL_TESTING_METHODS.md  CLUSTER_READINESS.md  COMMAND_CONTRACTS.md  COMMON_FAILURE_MODES.md  DEPENDENCIES_AND_SOURCES.md  E2E_PIPELINE.md  E2E_SIMULATION.md  EXECUTION_PLAYBOOK.md  GENERALIZED_RECURRENT_DEPTH_LESSONS.md  H100_SETUP.md  HANDOFF.md  MEASUREMENT_AND_GATES.md  OPENMYTHOS_DEEP_DIVE.md  PRIOR_EXPERIMENT_FINDINGS.md  RESEARCH_REFRESH_2026.md  RESEARCH_SYNTHESIS.md  RUNTIME_SETUP.md  RUN_MANIFEST_GUIDE.md
scripts/: bootstrap_h100.sh  cluster_contract_check.py  create_run_repo.sh  gpu_status.py  preflight_check.py  setup_env.py  simulate_full_loop.sh  validate_pipeline_config.py  validate_strategy_matrix.py
src/rdharness/: __init__.py  cli.py  config.py  dataops.py  discovery.py  environment.py  execution.py  gitops.py  ideas.py  llm.py  orchestrator.py  paths.py  reporting.py  research.py  serialization.py  types.py  workspace.py
templates/: .gitignore  ORCHESTRATOR_RULES.md  README.md  RULES.md  findings.md
templates/slurm/: accelerate.sbatch  torchrun.sbatch
tests/: test_pipeline_config.py  test_run_manifest.py  test_strategy_matrix.py  test_workspace_and_cycle.py
(+7 files in other folders)
